<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:id="@+id/tv_okhttp_response"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="vertical" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        android:text="@string/synchronous"
        android:textColor="@color/colorTextFont"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:weightSum="4">

        <Button
            android:id="@+id/btn_okhttp_sync_get_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/get_text" />

        <Button
            android:id="@+id/btn_okhttp_sync_get_json"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/get_json" />

        <Button
            android:id="@+id/btn_okhttp_sync_post_json"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/post_json" />

        <Button
            android:id="@+id/btn_okhttp_sync_post_file"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/post_file" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        android:text="@string/asynchronous"
        android:textColor="@color/colorTextFont"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:weightSum="4">

        <Button
            android:id="@+id/btn_okhttp_async_get_gson"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/get_gson" />

        <Button
            android:id="@+id/btn_okhttp_async_post_gson"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/post_gson" />

        <Button
            android:id="@+id/btn_okhttp_async_get_file"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/get_file" />

        <Button
            android:id="@+id/exit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exit"
            android:textColor="#EA0000" />
    </LinearLayout>

</LinearLayout>